# aoc2024

./: pyproject.toml  tasks.py
1/: main.py
2/: main.py
3/: main.py
template/: main.py
