[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["siriustuck"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pyinvoke = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
